--- a/Aula 1/Aula1.ipynb
+++ b/Aula 1/Aula1.ipynb
@@ -33,7 +33,7 @@
     "\n",
     "# Passo 1: Entrar no sistema (no nosso caso, entrar no link)\n",
     "pyautogui.hotkey(\"ctrl\", \"t\")\n",
-    "pyperclip.copy(\"https://drive.google.com/drive/folders/149xknr9JvrlEnhNWO49zPcw0PW5icxga?usp=sharing\")\n",
+    "pyperclip.copy(\"https://drive.google.com/drive/folders/xxxxxxxxxxxxxxx\")\n",
     "pyautogui.hotkey(\"ctrl\", \"v\")\n",
     "pyautogui.press(\"enter\")\n",
     "\n",
